good result code accelerate

--- a/FTS_SRC/FTS_SRC.ipynb
+++ b/FTS_SRC/FTS_SRC.ipynb
@@ -417,27 +417,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_H_matrix' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m (N,J) \u001b[38;5;241m=\u001b[39m random_data_matrix\u001b[38;5;241m.\u001b[39mshape\n\u001b[1;32m      3\u001b[0m dl \u001b[38;5;241m=\u001b[39m DictionaryLearning(n_components \u001b[38;5;241m=\u001b[39m n_components, tol\u001b[38;5;241m=\u001b[39mtol, max_iter \u001b[38;5;241m=\u001b[39m max_iter, transform_alpha\u001b[38;5;241m=\u001b[39mtransform_alpha)\n\u001b[0;32m----> 4\u001b[0m A_H \u001b[38;5;241m=\u001b[39m dl\u001b[38;5;241m.\u001b[39mfit_transform(\u001b[43mX_H_matrix\u001b[49m) \u001b[38;5;66;03m# Number samples* Number features K * C1\u001b[39;00m\n\u001b[1;32m      5\u001b[0m learned_dictionary \u001b[38;5;241m=\u001b[39m dl\u001b[38;5;241m.\u001b[39mcomponents_ \u001b[38;5;66;03m# n_components, n_features W * C1\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_H_matrix' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "random_data_matrix = generate_random_data(num_samples, timesteps).T\n",
-    "(N,J) = random_data_matrix.shape\n",
-    "dl = DictionaryLearning(n_components = n_components, tol=tol, max_iter = max_iter, transform_alpha=transform_alpha)\n",
-    "A_H = dl.fit_transform(X_H_matrix) # Number samples* Number features K * C1\n",
-    "learned_dictionary = dl.components_ # n_components, n_features W * C1"
+    "# random_data_matrix = generate_random_data(num_samples, timesteps).T\n",
+    "# (N,J) = random_data_matrix.shape\n",
+    "# dl = DictionaryLearning(n_components = n_components, tol=tol, max_iter = max_iter, transform_alpha=transform_alpha)\n",
+    "# A_H = dl.fit_transform(X_H_matrix) # Number samples* Number features K * C1\n",
+    "# learned_dictionary = dl.components_ # n_components, n_features W * C1"
    ]
   },
   {
@@ -461,23 +449,19 @@
     "    D = np.random.rand(w, K)\n",
     "    A = np.random.rand(K, c_prime)\n",
     "\n",
-    "    # Define the objective function for optimization\n",
     "    def objective(params):\n",
     "        D = params[:w * K].reshape((w, K))\n",
     "        A = params[w * K:].reshape((K, c_prime))\n",
     "        return np.linalg.norm(windows - np.dot(D, A), 'fro')**2\n",
     "\n",
-    "    # Define the sparsity constraint function\n",
     "    def sparsity_constraint(A):\n",
     "        return np.sum(np.abs(A) > 1e-5) - t\n",
-    "\n",
-    "    # Define the combined objective function (including sparsity constraint)\n",
+    "    \n",
     "    def combined_objective(params):\n",
     "        D = params[:w * K].reshape((w, K))\n",
     "        A = params[w * K:].reshape((K, c_prime))\n",
     "        return objective(params) + sparsity_constraint(A)\n",
     "\n",
-    "    # Perform optimization\n",
     "    result = minimize(combined_objective, np.concatenate((D.flatten(), A.flatten())))\n",
     "\n",
     "    # Retrieve the learned dictionary\n",
@@ -617,49 +601,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "40"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "N_T"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Version 2 for\n",
+    "# final_reconstruction = np.zeros(N_T)\n",
+    "# for index in range(N_T):\n",
+    "#     temp = []\n",
+    "#     for win in range(reconstructed_window.shape[1]):\n",
+    "#         start_index = win * s\n",
+    "#         end_index = start_index + w\n",
+    "#         if index<end_index and index>=start_index:\n",
+    "#             # print (\"index\"+str(index))\n",
+    "#             # print (\"start_index\"+str(start_index))\n",
+    "#             # print (\"win\"+str(win))\n",
+    "#             temp.append(reconstructed_window[index-start_index,win])\n",
+    "        \n",
+    "#     temp = np.array(temp)\n",
+    "#     final_reconstruction[index] = np.mean(temp)\n",
+    "\n",
+    "# Version 1 for only\n",
     "final_reconstruction = np.zeros(N_T)\n",
     "for index in range(N_T):\n",
-    "    temp = []\n",
-    "    for win in range(reconstructed_window.shape[1]):\n",
-    "        start_index = win * stride\n",
-    "        end_index = start_index + w\n",
-    "        if index<end_index and index>=start_index:\n",
-    "            # print (\"index\"+str(index))\n",
-    "            # print (\"start_index\"+str(start_index))\n",
-    "            # print (\"win\"+str(win))\n",
-    "            temp.append(reconstructed_window[index-start_index,win])\n",
-    "        \n",
-    "    temp = np.array(temp)\n",
+    "    start_indices = np.arange(reconstructed_window.shape[1]) * s\n",
+    "    end_indices = start_indices + w\n",
+    "    mask = np.logical_and(index >= start_indices, index < end_indices)\n",
+    "    temp = reconstructed_window[index - start_indices[mask], mask]\n",
     "    final_reconstruction[index] = np.mean(temp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +651,7 @@
        "       172.5955676 , 189.71102616, 188.70864224, 177.98755353])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
