Update: add comments

--- a/useful/sparse_coding_ksvd.ipynb
+++ b/useful/sparse_coding_ksvd.ipynb
@@ -55,6 +55,7 @@
     "        self.data_return = np.diff(data)/data[:-1]\n",
     "\n",
     "    def create_sliding_windows(self, data_type, window_size, stride):\n",
+    "        # Get the data for each window, it can be price or the return\n",
     "        if data_type == \"origin\":\n",
     "            data = self.data\n",
     "        if data_type==\"return\":\n",
@@ -74,6 +75,7 @@
     "        return X_matrix\n",
     "    \n",
     "    def classifiction_pm(self, data_type, window_size, stride, test_size):\n",
+    "        # Get the train and the test set for the up-down binary classification task\n",
     "        if data_type == \"origin\":\n",
     "            data = self.data\n",
     "        if data_type==\"return\":\n",
@@ -122,13 +124,14 @@
     "        self.length = time_series.shape[1]\n",
     "    \n",
     "    def initialize(self):\n",
-    "\n",
+    "        # Initialize the dictionart with all the elements equal 1\n",
     "        shape=[self.length, self.K]\n",
     "        self.D = np.ones(shape)\n",
     "        for i in range(shape[1]):\n",
     "            self.D[:, i]=self.D[:, i]/np.linalg.norm(self.D[:, i])\n",
     "\n",
     "    def update_dict(self, sparse_code):\n",
+    "        # Update the dictionary with the K-SVD\n",
     "        for i in range(self.K):\n",
     "            index = np.nonzero(sparse_code[i, :])[0]\n",
     "            if len(index) == 0:\n",
@@ -141,17 +144,20 @@
     "        return self.D, sparse_code\n",
     "    \n",
     "    def projection(self, z):\n",
+    "        # Projection to make the coding have only K0 non-zero elements\n",
     "        res = z.copy()\n",
     "        sort = np.sort(res, axis=0)[-self.K0, :]\n",
     "        res = np.where(res - sort[np.newaxis, :]>=0, res, 0)\n",
     "        return res\n",
     "    \n",
     "    def projection_test(self, z, threshold):\n",
+    "        # Projection to make all the elements smaller than threshold to 0\n",
     "        res = z.copy()\n",
     "        res = np.where(res>threshold, res, 0)\n",
     "        return res\n",
     "\n",
     "    def sparse_coding(self, tol, max_iter, time_series=None, projection_type=\"train\"):\n",
+    "        # TO learn the sparse coding with a dictionart fixed\n",
     "        if time_series is None:\n",
     "            time_series = self.time_series\n",
     "            projection_type = \"train\"\n",
@@ -173,6 +179,7 @@
     "        return sparse_code_next\n",
     "    \n",
     "    def ksvd(self, max_iter):\n",
+    "        # Pipeline complet for K-SVD\n",
     "        self.initialize()\n",
     "        sparse_code = self.sparse_coding(1e-5, 1000)\n",
     "        for i in range(max_iter):\n",
@@ -199,6 +206,7 @@
    "outputs": [],
    "source": [
     "def preprocess(price):\n",
+    "    # Data cleaning\n",
     "    price = price.copy()\n",
     "    price.columns = price.columns.map(lambda x: x.lower())\n",
     "    price.loc[:, \"price\"] = price[\"price\"].map(lambda x: x.replace(\",\", \"\"))\n",
@@ -214,7 +222,7 @@
    "outputs": [],
    "source": [
     "def test_reconstruction(price, name):\n",
-    "\n",
+    "    # Test for reconstruction the data\n",
     "    time_series = preprocess(price)\n",
     "    model_data = data_maker(time_series, \"classification_pm\")\n",
     "    X_re_p, X_test_p, X_re_m, X_test_m = model_data.classifiction_pm(\"return\", window_size, stride, test_size)\n",
@@ -222,8 +230,11 @@
     "    model_m = KSVD(X_re_m.astype(\"float\"), K=150, K0=15)\n",
     "    _, code_m = model_m.ksvd(100)\n",
     "    test_m_code_sp = model_m.sparse_coding(1e-7, 1000, time_series=X_test_m.astype(\"float\").T, projection_type=\"train\")\n",
+    "    # Sparse code 1 with projection normal (make the coding have only K0 non-zero elements)\n",
     "    test_m_code_spt = model_m.sparse_coding(1e-7, 1000, time_series=X_test_m.astype(\"float\").T, projection_type=\"test\")\n",
+    "    # Sparse code 2 with projection test (make all the elements smaller than threshold to 0)\n",
     "    test_m_code = model_m.sparse_coding(1e-7, 1000, time_series=X_test_m.astype(\"float\").T, projection_type=None)\n",
+    "    # Full code\n",
     "\n",
     "    recon_m_sp = model_m.D.dot(test_m_code_sp)\n",
     "    recon_m_spt = model_m.D.dot(test_m_code_spt)\n",
@@ -238,7 +249,7 @@
     "    plt.legend()\n",
     "    plt.title(f\"Reconstruction for the {name} in the test set\")\n",
     "    plt.show()\n",
-    "    # plt.savefig(\"/Users/shurui/python/sparseDictionaryTimeSeries/recons.jpg\")"
+    "    # plt.savefig(f\"{work_path}/recons_{name}.jpg\")"
    ]
   },
   {
@@ -312,6 +323,7 @@
    "outputs": [],
    "source": [
     "def test_updown_classification(price, name):\n",
+    "    # Up-down binary classification task\n",
     "    \n",
     "    time_series = preprocess(price)\n",
     "    model_data = data_maker(time_series, \"classification_pm\")\n",
@@ -323,6 +335,7 @@
     "    model_p = KSVD(X_re_p.astype(\"float\"), K=150, K0=15)\n",
     "    _, code_p = model_p.ksvd(100)\n",
     "\n",
+    "    # Method 1, no projection effected in the coding, and compare the l1-norm of the final code\n",
     "    test_m_code = model_m.sparse_coding(1e-7, 1000, time_series=X_test_m.astype(\"float\").T, projection_type=None)\n",
     "    test_p_code = model_p.sparse_coding(1e-7, 1000, time_series=X_test_p.astype(\"float\").T, projection_type=None)\n",
     "    test_m_code_p = model_p.sparse_coding(1e-7, 1000, time_series=X_test_m.astype(\"float\").T, projection_type=None)\n",
@@ -333,6 +346,7 @@
     "    accuracy = (np.where(resm>0, 1, 0).sum() + np.where(resp>0, 1, 0).sum()) / (2*test_size)\n",
     "    print(f\"The accuracy score for the method 1 on the {name} test set is {accuracy}\\n\")\n",
     "\n",
+    "    # Method 2, projection test effected (make all the elements smaller than threshold to 0) in the coding, and compare the number of the non-zero element in the final code\n",
     "    test_m_code = model_m.sparse_coding(1e-7, 1000, time_series=X_test_m.astype(\"float\").T, projection_type=\"test\")\n",
     "    test_p_code = model_p.sparse_coding(1e-7, 1000, time_series=X_test_p.astype(\"float\").T, projection_type=\"test\")\n",
     "    test_m_code_p = model_p.sparse_coding(1e-7, 1000, time_series=X_test_m.astype(\"float\").T, projection_type=\"test\")\n",
